# happy_birthday_d_b_26

./: .gitignore  .taplo.toml  README.md  main.py  pyproject.toml
src/happy_birthday_d_b_26/: __init__.py
src/hbdb_26/: __init__.py
src/hbdb_26/application/: __init__.py  heart_display.py  heart_registry.py  subplot_grid.py
src/hbdb_26/equation/: __init__.py  julia.py  taubin.py
src/hbdb_26/renderer/: __init__.py  matplotlib_visualizer.py
src/hbdb_26/scene/: __init__.py  heart.py  heart_maker.py
src/hbdb_26/util/: __init__.py  configuration.py
src/hbdb_26/visualizer/: __init__.py  matplotlib.py
