[project]
name = "happy-birthday-d-b-26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "seokbong131", email = "seokbong131@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "scikit-image>=0.26.0",
]

[project.scripts]
happy-birthday-d-b-26 = "happy_birthday_d_b_26:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
